[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hooshyar"
version = "0.1.0"
description = "سیستم رصد و تحلیل توییتر"
requires-python = ">=3.10"
authors = [
    {name = "توسعه‌دهنده", email = "developer@example.com"},
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.5",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "alembic>=1.11.1",
    "httpx>=0.24.1",
    "asyncio>=3.4.3",
    "anthropic>=0.5.0",
    "apscheduler>=3.10.1",
    "jinja2>=3.1.2",
    "pandas>=2.0.3",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.4.1",
    "flake8>=6.0.0",
]

[tool.setuptools.packages.find]
include = ["hooshyar*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true